Bug 336053 - Disabling the notification message for Clear Clipboard History when answering "no" breaks future history clearing
Summary: Disabling the notification message for Clear Clipboard History when answering...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.15.3
Platform: Exherbo Linux
: HI normal
Target Milestone: 1.0
Assignee: Martin Flöser
URL:
Keywords:
: 334327 356837 391549 418900 424725 426787 434183 435722 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-10 16:04 UTC by Bernd Steinhauser
Modified: 2021-05-08 07:40 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Steinhauser 2014-06-10 16:04:24 UTC
I wanted to clear my clipboard contents, clicked on "Clear Clipboard History" and because I didn't want this dialog again, activated the button to not show it again. Then I accidentally clicked on "No", meaning the history wasn't cleared. Now klipper always behaves like that, never clearing history without asking. The only way to fix this atm seems to be to edit the configuration file.

Reproducible: Always

Steps to Reproduce:
1. Ensure that "really_clear_history" is not set in klipperrc
2. Select "Clear Clipboard History", activate the function to not show this dialog again
3. Click on "No" to not clear the content
Actual Results:  
Dialog is not shown again, history is never cleared. There is an entry in the configuration file:
[Notification Messages]
really_clear_history=false

Expected Results:  
Since this combination doesn't make sense and is actually unwanted, it should ignore it.
Comment 1 Christoph Feck 2014-06-10 20:48:52 UTC
*** Bug 334327 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2015-12-23 11:46:09 UTC
*** Bug 356837 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2018-03-29 23:52:40 UTC
*** Bug 391549 has been marked as a duplicate of this bug. ***
Comment 4 Leonardo 2018-04-01 08:45:01 UTC
I noticed it too. Removing the really_clear_history=false false from the config file doesn't immediately solve it.
Comment 5 Sefa Eyeoglu 2019-07-26 11:15:55 UTC
I restored original functionality by also removing really_clear_history from .config/plasmashellrc. Just run grep -r "really_clear_history" inside .config
Comment 6 Nate Graham 2020-08-07 17:16:24 UTC
*** Bug 424725 has been marked as a duplicate of this bug. ***
Comment 7 David Edmundson 2021-03-09 12:44:24 UTC
*** Bug 434183 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-04-01 19:11:37 UTC
*** Bug 418900 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2021-04-01 20:03:06 UTC
*** Bug 426787 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-04-14 13:46:24 UTC
*** Bug 435722 has been marked as a duplicate of this bug. ***
Comment 11 Bug Janitor Service 2021-04-26 05:52:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/816
Comment 12 Nate Graham 2021-05-05 14:34:36 UTC
Git commit 62f8e352473c307febe83866a9dd1028e17f6526 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 05/05/2021 at 14:34.
Pushed by ngraham into branch 'master'.

[applets/clipboard] Change clear dialog to warningContinueCancel

Previously the "clear clipboard history?" dialog used `KMessageBox::questionYesNo`
which if "don't ask again" is ticked then saves the answer even if No was answered.
This can cause the user to not be able to ever clear the clipboard ever again. This
commit changes it to `KMessageBox::warningContinueCancel` which doesn't do that, and
is more appropriate for the kind of question we're asking.
FIXED-IN: 5.22

M  +5    -5    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/62f8e352473c307febe83866a9dd1028e17f6526
Comment 13 Nate Graham 2021-05-05 14:35:18 UTC
Git commit c2e1f4897d34fe0f53606a807dc82c81d2fd97e2 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 05/05/2021 at 14:35.
Pushed by ngraham into branch 'master'.

Add update script for new klipper clear dialog config

Previously, Klipper "clear history" dialog used to not ask again even
if user answered No. This was changed so that only a Yes answer will
lead to no more asking, by using `warningContinueCancel` instead of
`questionYesNo`.

Now the behaviour of previous config value `really_clear_history` has
inverted: true/undefined => ask again; false => don't ask. This update
script migrates old configs to use the new config value, renamed to
`klipperClearHistoryAskAgain`.

Depends on plasma-workspace!816.

A  +14   -0    desktoppackage/contents/updates/klipper_clear_config.js

https://invent.kde.org/plasma/plasma-desktop/commit/c2e1f4897d34fe0f53606a807dc82c81d2fd97e2
Comment 14 H.H. 2021-05-05 16:12:33 UTC
I have a question: is there a GUI for this setting, to be able to change it, after "clicking away" some dialog accidentely? My only solution so far was editing some rc file?
Comment 15 Bharadwaj Raju 2021-05-08 07:40:08 UTC
(In reply to H.H. from comment #14)
> I have a question: is there a GUI for this setting, to be able to change it,
> after "clicking away" some dialog accidentely? My only solution so far was
> editing some rc file?

We should probably add a button for this in the applet settings somewhere. For example see Konsole: in its settings it has a "Enable all 'Do not show again' messages" button.